--- a/src/components/searchCard/searchCard.css
+++ b/src/components/searchCard/searchCard.css
@@ -1,14 +1,9 @@
-.image-card {
+
+
+.image-search {
     border: 1px solid white;
-    /* max-width: 200px;
-    max-height: 200px; */
-    /* width: 100%; */
-    /* display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px; */
     display: flex;
     flex-direction: column;
-    
     width: 150px;
     height: 170px;
     margin-bottom: 20px;
@@ -18,15 +13,15 @@
 
 
 
-.image-card:hover {
+.search-card:hover {
     background: #996fae;
     width: 160px;
     height: 180px;
-    cursor: pointer;
+    
     transform: translate3d(50px);
 }
 
-.image-card > p {
+.search-card > p {
     color: rgb(226, 208, 104);
     margin-top: 5px;
     font-size: small;
@@ -35,7 +30,8 @@
 }
 
 
-.image {
+
+.search-card > .image {
     width: 100%;
     aspect-ratio: 5/4;
     
