--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -29,7 +29,7 @@
 #grid-container {
     transform: skewY(-1deg);
     width: 90%;
-    border: 1px solid gold;
+    
     padding: 20px;
     margin-top: 20px;
     display: grid;
@@ -40,13 +40,30 @@
 
 }
 
+.search-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
 
+.search-button {
+    height: 40px;
+    border-radius: 10px;
+    background: green;
+    color: gold;
+    padding: 2px;
+}
+
+.search-button:hover {
+    cursor: pointer;
+}
 
 .input {
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 5px;
-    width: 400px;
+    width: 100%;
     height: 40px;
     border: 1px solid gold;
     border-radius: 10px;
@@ -59,7 +76,7 @@
 .nav-bar > ul {
     position: relative;
     transform: skewY(15deg);
-    border: 0.1px solid gold;
+  
     margin-bottom: 30px;
     margin-top: 18px;
     width: 70px;
@@ -88,6 +105,7 @@ li:hover {
     background: #996fae;
     transform: translateX(10px);
     transform: translate3d(50px);
+    cursor: pointer;
 
 }
 
