--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -21,7 +21,19 @@
    
 }
 
+.search-content {
+    display: grid;
+    width: 80%;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 20px;
+    padding-left: 20px;
+    padding-top: 15px;
+    box-shadow: 0px 5px 26px 0px rgba(248, 246, 246, 0.22), 0px 20px 28px 0px rgb(0 0 0 / 30%);
+
+}
+
 .home-content {
+    
     width: 90%;
     display: flex;
 }
@@ -78,7 +90,7 @@
     transform: skewY(15deg);
   
     margin-bottom: 30px;
-    margin-top: 18px;
+    margin-top: 33px;
     width: 70px;
     height: 100%;
     /* box-shadow: 0px 5px 26px 0px rgba(248, 246, 246, 0.22), 0px 20px 28px 0px rgb(0 0 0 / 30%); */
