--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -4,20 +4,23 @@
     left: 0px;
     /* border: 1px solid black; */
     width: 100%;
+    height: auto;
     
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     
     /* padding: 50px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* height: 100%; */
-    overflow: hidden;
+   height: max-content;
+   padding-top: 30px;
+   padding-bottom: 50px;
+    /* overflow: hidden; */
 
-    background: linear-gradient(45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    /* background: linear-gradient(45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
+    animation: gradient 15s ease infinite; */
    
 }
 
@@ -30,6 +33,9 @@
     padding-top: 15px;
     box-shadow: 0px 5px 26px 0px rgba(248, 246, 246, 0.22), 0px 20px 28px 0px rgb(0 0 0 / 30%);
 
+    background: linear-gradient(45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
 }
 
 .home-content {
